[package]
name = "gpioduino"
version = "0.1.0"
authors = ["Oscar Moreno <oscarmg99@gmail.com>"]
description = "gpioduino rust client library"
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/gpioduino/gpioduino-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"